--- a/templates/index.html
+++ b/templates/index.html
@@ -53,25 +53,11 @@
             </div>
             <!-- Show button -->
             <div class="button_cont" align="center">
-                <a class="button_css" href="https://github.com/prem-creator/heart-detector.git" target="_blank" rel="nofollow noopener">
-                    <button type="submit" class="btn btn-primary btn-block btn-large">
-                        Predict Now
-                    </button></a>
+                <button type="submit">
+                    Predict Now
+                </button>
             </div>
         </form>
-
-
-        <!-- Show predicted output using ML model -->
-        <!-- <div>
-            <center>
-                <h1>{{ prediction_text }}</h1>
-            </center>
-        </div>
-        <div>
-            <h5>
-                {{ content }}
-            </h5>
-        </div> -->
     </div>
 </body>
 
