--- a/templates/about.html
+++ b/templates/about.html
@@ -27,8 +27,10 @@
         <!-- Intro para -->
         <div class="intro">
             <h1>About the Project..</h1>
-            <p>Some Crap about the project <br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus explicabo, blanditiis officia nostrum, consequuntur et, placeat earum aliquam provident dolore tempora molestiae odit rerum. Quisquam repudiandae
-                laudantium ipsa animi ipsum. <br>Checkout the resources here:-</p>
+            <p>The purpose of this project titled, ‘Prediction of Pre-Diabetes and Diabetes in Mothers above 21 years of age with Machine Learning Models’, is to build a website which collects relevant user details and predicts their diabetic condition using
+                a Machine Learning model. <br><br>The target users for our project are mothers over the age of 21 who are relatively more prone to diabetes. They can use the website for self-diagnosis, helping them make better health decisions and get
+                medical consultation to avoid future complications. We applied various Machine Learning algorithms and performed several data cleansing techniques to increase the accuracy and precision of prediction of Pre-diabetes and Diabetes using
+                relevant health attributes through this project.<br><br>Checkout the resources here:-</p>
             <div class="wrap">
                 <div class="one">
                     <a href="{{ url_for('mlmodel') }}"><i class="fa-solid fa-file-code fa-lg"></i>
