--- a/templates/diabetes.html
+++ b/templates/diabetes.html
@@ -1,5 +1,7 @@
-{% extends "result.html" %} {% block tleft %} enter text to be inserted in left side of the "what to do next" division {% endblock %} {% block tright %} enter text to be inserted in right side of the "what to do next" division {% endblock %} {% block
-tleft1 %} # links on the left side of "useful reads"
+{% extends "result.html" %} {% block tleft %} ⭕ Being diabetic is not the end of the world and with an active lifestyle and good eating habits , a diabetic person can live a long healthy life. It is also important to consult a Endocrinologist and follow
+any changes in lifestyle and the medicines recommended by the doctor. <br> ⭕ At the same time, we suggest doing the following to maintain a good lifestyle and live with minimal restrictions even after being diagosed with diabetes > {% endblock %} {% block
+tright %} 🍎 Eat a variety of foods, including vegetables, whole grains, fruits, non-fat dairy foods, healthy fats, and lean meats or meat substitutes. <br>❌ Try not to eat too much food.<br>1️⃣ Try not to eat too much of one type of food.<br> ⏲️ Space
+your meals evenly throughout the day.<br>⏭️ Avoid skipping meals. {% endblock %} {% block tleft1 %} # links on the left side of "useful reads"
 <a href="#">link</a><br>
 <a href="#">link</a><br>
 <a href="#">link</a> {% endblock %} {% block tright1 %} # links on the right side of "useful reads"
