--- a/templates/nodiabetes.html
+++ b/templates/nodiabetes.html
@@ -1,8 +1,14 @@
-{% extends "result.html" %} {% block tleft %} enter text to be inserted in left side of the "what to do next" division {% endblock %} {% block tright %} enter text to be inserted in right side of the "what to do next" division {% endblock %} {% block
-tleft1 %} # links on the left side of "useful reads"
-<a href="#">link</a><br>
-<a href="#">link</a><br>
-<a href="#">link</a> {% endblock %} {% block tright1 %} # links on the right side of "useful reads"
-<a href="#">link</a><br>
-<a href="#">link</a><br>
-<a href="#">link</a> {% endblock %}
+{% extends "result.html" %} {% block tleft %}Lifestyle changes can help prevent the onset of type-2 diabetes, the most common form of the disease. Prevention is especially important if you're currently at an increased risk of type 2 diabetes because of
+excess weight or obesity, high cholesterol, or a family history of diabetes. {% endblock %} {% block tright %} A few small steps in the right direction like: <br> 🥬Eating plant-based foods <br> 🏃Being physically active <br>⭕Losing extra weight can go
+a long way in the prevention of diabetes.{% endblock %} {% block tleft1 %}
+<a href="https://www.gundersenhealth.org/health-wellness/be-well/6-natural-ways-to-prevent-diabetes-before-it-starts/">6 natural ways to prevent diabetes before it starts</a><br>
+<a href="https://www.hsph.harvard.edu/nutritionsource/disease-prevention/diabetes-prevention/preventing-diabetes-full-story/">Simple Steps to Preventing Diabetes
+</a><br>
+<a href="https://www.news18.com/news/lifestyle/keep-diabetes-at-bay-with-these-easy-lifestyle-tips-3400472.html">Keep Diabetes at Bay with These Easy Lifestyle Tips
+</a> {% endblock %} {% block tright1 %}
+<a href="https://medlineplus.gov/howtopreventdiabetes.html">How to Prevent Diabetes
+</a><br>
+<a href="https://www.medicinenet.com/diabetes_prevention/article.htm">How to Prevent Diabetes Naturally
+</a><br>
+<a href="https://www.idf.org/aboutdiabetes/prevention.html">Diabetes prevention
+</a> {% endblock %}
