--- a/templates/prediabetes.html
+++ b/templates/prediabetes.html
@@ -1,8 +1,9 @@
-{% extends "result.html" %} {% block tleft %} enter text to be inserted in left side of the "what to do next" division {% endblock %} {% block tright %} enter text to be inserted in right side of the "what to do next" division {% endblock %} {% block
-tleft1 %} # links on the left side of "useful reads"
-<a href="#">link</a><br>
-<a href="#">link</a><br>
-<a href="#">link</a> {% endblock %} {% block tright1 %} # links on the right side of "useful reads"
-<a href="#">link</a><br>
-<a href="#">link</a><br>
-<a href="#">link</a> {% endblock %}
+{% extends "result.html" %} {% block tleft %} Prediabetes is the period before diabetes is diagnosed where blood sugar levels are high but not high enough to be diagnosed as diabetes. Fortunately, progressing from prediabetes to diabetes is not inevitable.
+There are many actions you can take to reduce the risk of diabetes. {% endblock %} {% block tright %} A few of them are: <br> 🍨 Cut sugar and refined carbohydrates from your diet. <br> 🚭 Quit smoking<br> 🥝 Watch your portions.<br> 🚰 Drink water.<br>🍚
+Eat fiber. {% endblock %} {% block tleft1 %}
+<a href="https://www.endocrineweb.com/conditions/pre-diabetes">What Is Prediabetes?</a> <br>
+<a href="https://www.healthline.com/health/diabetes/how-to-reverse-prediabetes-naturally">8 Lifestyle Tips to Help Reverse Prediabetes Naturally</a><br>
+<a href="https://www.webmd.com/diabetes/features/prediabetes-diagnosis-what-to-do">Prediabetes: 7 Steps to Take Now</a><br>{% endblock %} {% block tright1 %}
+<a href="https://www.abbott.com/corpnewsroom/diabetes-care/how-to-control-and-manage-prediabetes.html">Diagnosed With Prediabetes? Take Steps to Control it</a><br>
+<a href="https://my.clevelandclinic.org/health/diseases/21498-prediabetes">Prediabetes: What is it?, Who's at Risk?</a><br>
+<a href="https://www.medicalnewstoday.com/articles/how-to-reverse-prediabetes-naturally">Naturally reversing prediabetes: What to know</a>{% endblock %}
