--- a/templates/result.html
+++ b/templates/result.html
@@ -44,12 +44,12 @@
             </div>
         </div>
         <div class="links">
-            <div class="t">Useful Reads</div>
+            <div class="tu">Useful Reads</div>
             <div class="text">
-                <div class="tleft">
+                <div class="tleft1">
                     {% block tleft1 %} {% endblock %}
                 </div>
-                <div class="tright">
+                <div class="tright1">
                     {% block tright1 %} {% endblock %}
                 </div>
             </div>
