--- a/static/styles/result.css
+++ b/static/styles/result.css
@@ -82,22 +82,37 @@ b {
 }
 
 .t {
-    margin-bottom: 0.5rem;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
     font-size: 1.5rem;
     font-weight: 500;
-    /* text-decoration: underline; */
+    text-decoration: underline;
+}
+
+.tu {
+    margin-bottom: 1.5rem;
+    margin-top: 0rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-decoration: underline;
 }
 
 .text {
     display: flex;
     width: 80vw;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .tleft,
 .tright {
-    width: 45%;
+    width: 40%;
     text-align: justify;
+}
+
+.tleft1,
+.tright1 {
+    width: 40%;
+    text-align: center;
 }
 
 .btn {
@@ -119,6 +134,12 @@ b {
 }
 
 .predres {
-    font-size: 2rem;
-    margin: 1.3rem 0 0 0;
+    font-size: 2.3rem;
+    font-weight: 500;
+    text-decoration: underline;
+    margin: 2rem 0 0 0;
+}
+
+.text a {
+    color: black;
 }
