--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -122,7 +122,7 @@ a:hover {
     border-radius: 2rem 0;
     margin: 1rem 0;
     padding: 1rem 2rem;
-    background-color: rgba(255, 255, 255, 0.767);
+    background-color: rgba(255, 255, 255, 0.799);
 }
 
 .text h1 {
@@ -132,7 +132,12 @@ a:hover {
 }
 
 .text p {
-    margin-bottom: 0;
+    margin-bottom: 0.5rem;
     text-align: justify;
+    font-size: 1.3rem;
+    margin-top: 0.5rem;
+}
+
+ul {
     font-size: 1.3rem;
 }
