--- a/templates/index.html
+++ b/templates/index.html
@@ -25,9 +25,14 @@
     <div class="bg">
         <div class="text">
             <h1>Predict Your Diabetes</h1>
-            <p>General information about diabetes in mothers above the age of 21. Directions on how to use the website and what all they can get from it. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p>
+                Diabetes is a disease that occurs when your blood glucose is higher than expected. According to the World Health Organization (WHO), India had 69.2 million people living with diabetes in 2015 and nearly 98 million people in India may have type 2 diabetes
+                by 2030. Diabetes is more dangerous in women as compared to men as they are more prone to diabetes related complications than men.<br><br><b>Guidelines:</b><br>
+                <ul>
+                    <li>Scroll down and enter the health attributes to view your predicted results and suggestions.</li>
+                    <li>You can also make use of the 'Predict Now' button in the Navigation Bar to do the same.</li>
+                    <li>To know more about the project, make use of the 'About' button in the Navigation bar.</li>
+                </ul>
             </p>
         </div>
     </div>
