--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
     <div class="general">
         <!-- Intro para -->
         <div class="intro">
-            <h1>About the Project..</h1>
+            <h1 class="abt">About the Project..</h1>
             <p>The purpose of this project titled, ‘Prediction of Pre-Diabetes and Diabetes in Mothers above 21 years of age with Machine Learning Models’, is to build a website which collects relevant user details and predicts their diabetic condition using
                 a Machine Learning model. <br><br>The target users for our project are mothers over the age of 21 who are relatively more prone to diabetes. They can use the website for self-diagnosis, helping them make better health decisions and get
                 medical consultation to avoid future complications. We applied various Machine Learning algorithms and performed several data cleansing techniques to increase the accuracy and precision of prediction of Pre-diabetes and Diabetes using
@@ -44,25 +44,32 @@
                     <a href="{{ url_for('pdf') }}"><i class="fa-solid fa-file-pdf fa-lg"></i><b>Final Document</b></a>
                 </div>
             </div><br>
-            <h1>Get To Know the Team behind this Project..</h1>
-            <p>Some Crap about us and maam <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, accusantium ea voluptates consectetur sapiente veniam impedit aliquid ratione optio aut animi! Ex et nisi fugiat a beatae vitae nobis alias!</p>
+            <h1 class="gen">Get To Know the Team behind this Project..</h1>
+            <p>
+                We are a group of three students who are very enthusiastic in learning and engineering software services. We were jointly mentored by Professor Swarnalatha P and teaching assistant Mr. Bhasker B for the past four months to build a model to accurately
+                predict diabetes in mothers over the age of 21. <br> In these months, Ma’am has taught us how to apply the theoretical concepts of Software Development Life Cycle in a real-world Machine Learning project. Watching our project
+                materialize through these months was an enriching learning experience.
+            </p>
             <div class="wrap">
-                <div>
+                <div class="innerWrap">
                     <h2>Tanvi S. Johari</h2>
+                    <p>20BCE0619</p>
                     <div class="cen">
                         <a href="{{ url_for('vigh') }}"><i class="first fa-brands fa-github-square fa-2xl"></i></a>
                         <a href="{{ url_for('viln') }}"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
                     </div>
                 </div>
-                <div>
+                <div class="innerWrap">
                     <h2>Harikrishnan Nair</h2>
+                    <p>20BCE0668</p>
                     <div class="cen">
                         <a href="{{ url_for('hgh') }}"><i class="first fa-brands fa-github-square fa-2xl"></i></a>
                         <a href="{{ url_for('hln') }}"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
                     </div>
                 </div>
-                <div>
+                <div class="innerWrap">
                     <h2>Kaushik S. Prabhakar</h2>
+                    <p>20BCE0635</p>
                     <div class="cen">
                         <a href="{{ url_for('kgh') }}"><i class="first fa-brands fa-github-square fa-2xl"></i></a>
                         <a href="{{ url_for('kln') }}"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
