--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,10 @@
             <h1>Predict Your Diabetes</h1>
             <p>
                 Diabetes is a disease that occurs when your blood glucose is higher than expected. According to the World Health Organization (WHO), India had 69.2 million people living with diabetes in 2015 and nearly 98 million people in India may have type 2 diabetes
-                by 2030. Diabetes is more dangerous in women as compared to men as they are more prone to diabetes related complications than men.<br><br><b>Guidelines:</b><br>
+                by 2030. Diabetes is more dangerous in women as compared to men as they are more prone to diabetes related complications than men.<br>
+            </p>
+            <p class="gui">
+                <b>Guidelines</b><br>
                 <ul>
                     <li>Scroll down and enter the health attributes to view your predicted results and suggestions.</li>
                     <li>You can also make use of the 'Predict Now' button in the Navigation Bar to do the same.</li>
