--- a/templates/about.html
+++ b/templates/about.html
@@ -52,6 +52,9 @@
             </p>
             <div class="wrap">
                 <div class="innerWrap">
+                    <div class="image">
+                        <img src="../static/images/tanvi.jpg" alt="">
+                    </div>
                     <h2>Tanvi S. Johari</h2>
                     <p>20BCE0619</p>
                     <div class="cen">
@@ -60,6 +63,9 @@
                     </div>
                 </div>
                 <div class="innerWrap">
+                    <div class="image">
+                        <img src="../static/images/hari.jpg" alt="">
+                    </div>
                     <h2>Harikrishnan Nair</h2>
                     <p>20BCE0668</p>
                     <div class="cen">
@@ -68,7 +74,10 @@
                     </div>
                 </div>
                 <div class="innerWrap">
-                    <h2>Kaushik S. Prabhakar</h2>
+                    <div class="image">
+                        <img src="../static/images/kaushik.jpg" alt="">
+                    </div>
+                    <h2>Kaushik Prabhakar</h2>
                     <p>20BCE0635</p>
                     <div class="cen">
                         <a href="{{ url_for('kgh') }}"><i class="first fa-brands fa-github-square fa-2xl"></i></a>
