--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -102,3 +102,22 @@ b {
 .innerWrap h2 {
     margin-bottom: 0.1rem;
 }
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.image {
+    width: 12rem;
+    height: 12rem;
+}
+
+.innerWrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
