--- a/templates/diabetes.html
+++ b/templates/diabetes.html
@@ -1,10 +1,10 @@
 {% extends "result.html" %} {% block tleft %} ⭕ Being diabetic is not the end of the world and with an active lifestyle and good eating habits , a diabetic person can live a long healthy life. It is also important to consult a Endocrinologist and follow
 any changes in lifestyle and the medicines recommended by the doctor. <br> ⭕ At the same time, we suggest doing the following to maintain a good lifestyle and live with minimal restrictions even after being diagosed with diabetes > {% endblock %} {% block
 tright %} 🍎 Eat a variety of foods, including vegetables, whole grains, fruits, non-fat dairy foods, healthy fats, and lean meats or meat substitutes. <br>❌ Try not to eat too much food.<br>1️⃣ Try not to eat too much of one type of food.<br> ⏲️ Space
-your meals evenly throughout the day.<br>⏭️ Avoid skipping meals. {% endblock %} {% block tleft1 %} # links on the left side of "useful reads"
-<a href="#">link</a><br>
-<a href="#">link</a><br>
-<a href="#">link</a> {% endblock %} {% block tright1 %} # links on the right side of "useful reads"
-<a href="#">link</a><br>
-<a href="#">link</a><br>
-<a href="#">link</a> {% endblock %}
+your meals evenly throughout the day.<br>⏭️ Avoid skipping meals. {% endblock %} {% block tleft1 %}
+<a href="https://www.mayoclinic.org/diseases-conditions/diabetes/in-depth/diabetes-management/art-20045803">Diabetes care: 10 ways to avoid complications</a><br>
+<a href="https://www.diabetes.org/diabetes">The path to understanding diabetes starts here</a><br>
+<a href="https://www.medicalnewstoday.com/articles/317436">What to do in diabetic emergencies</a> {% endblock %} {% block tright1 %}
+<a href="https://my.clevelandclinic.org/health/diseases/7104-diabetes-mellitus-an-overview">Diabetes: An Overview</a><br>
+<a href="https://www.healthline.com/health/type-2-diabetes">Understanding Type 2 Diabetes</a><br>
+<a href="https://www.webmd.com/diabetes/tips-diabetes-lifestyle">Lifestyle Changes to Help Control Diabetes</a> {% endblock %}
